updated readme file

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-PORT = 3000
-DATABASE_DIALECT = postgres
-DATABASE_HOST = localhost
-DATABASE_PORT = 49161
-DATABASE_USER = postgres
-DATABASE_PASSWORD = postgrespw
-DATABASE_NAME = postgres
+PORT = 
+DATABASE_DIALECT = 
+DATABASE_HOST = 
+DATABASE_PORT = 
+DATABASE_USER = 
+DATABASE_PASSWORD = 
+DATABASE_NAME = 
